Closed Bug 1710034 Opened 4 years ago Closed 4 years ago

choose a double tap rect for replaced elements that are not too tall that includes their full height, not just their width

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(1 file)

We always attempt to zoom to the width of the element we double tap on, cutting off the top/bottom of the element if necessary. For elements that contain text that are relatively quite tall this is good. But for things like images which are not really that tall, but just happen to have a taller aspect ratio then the viewport it is not ideal.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Blocks: 674371
Severity: -- → S3
Priority: -- → P3
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5ff0d52fd622 Choose a double tap rect for replaced elements that are not too tall that includes their full height, not just their width. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: