Bug 1710034. Choose a double tap rect for replaced elements that are not too tall that includes their full height, not just their width. r=emilio

We always attempt to zoom to the width of the element we double tap on, cutting off the top/bottom of the element if necessary. For elements that contain text that are relatively quite tall this is good. But for things like images which are not really that tall, but just happen to have a taller aspect ratio then the viewport it is not ideal.

Differential Revision: https://phabricator.services.mozilla.com/D114582